- | SML | Troubleshooting/CSS/Hotfix -- Map is weird on mobile, I thinkts its how the bottomcontrol animates from overflow:hidden. Trying to experiment and fix it

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 #bootstrapoverridesformap {
-    overflow: hidden;
+    /*overflow: hidden;  This might be screwing things up for mobile?*/
     position: absolute;
     height:100%;
     width: 100%;
